# memory_system

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: design.md  doc-management-skill.md
docs/architecture/: personal-os-design.md  platform-landing-review.md  reference-architecture.md
docs/architecture/_archive/: README.md  mvp-week1.md  obsidian-kb-sop.md  personal-os-design.md  roadmap.md
docs/implementation/: mvp-week1.md  obsidian-kb-sop.md  roadmap.md
docs/research/: community-operating-patterns.md  current-practices.md  nous-hermes-agent.md
examples/phase1-kb-first/: README.md
examples/phase1-kb-first/codex-home/: AGENTS.md  config.toml
examples/phase1-kb-first/codex-repo/: AGENTS.md
examples/phase1-kb-first/kb/archive/: 2026-04-03-writing-style.md
examples/phase1-kb-first/kb/daily/: 2026-04-03.md
examples/phase1-kb-first/kb/decisions/: phase-1-kb-first.md
examples/phase1-kb-first/kb/procedures/: weekly-consolidation.md
examples/phase1-kb-first/kb/profile/: user.md
notes/: design-kb-sp-bench.md
scripts/: approve.py  bench.py  build_site.py  import_cc_history.py  import_cc_memory.py  import_feishu_docx.py  import_paocai_memory.py  reject.py  request-changes.py  watch.py
site/: content.md  index.html  styles.css
site/diagrams/: build.json  example.json  platforms.json  routing.json  runtime.json  system-map.json
src/memory_system/: __init__.py  __main__.py  cli.py  models.py  service.py  storage.py
tests/: test_memory_system.py
(+5 files in other folders)
